--- a/src/templates/components/opinions-sidebar.html
+++ b/src/templates/components/opinions-sidebar.html
@@ -3,10 +3,15 @@
 <aside class="side-bar">
   <div class="header">
     <h3>Opiniões</h3>
-    <div class="action">Votos</div>
-    <div class="action -disable">Consenso</div>
-    <div class="action -disable">Dissenso</div>
+    <div class="action">
+      <span class="item">Consenso</span>
+      <span class="item -disable">Dissenso</span>
+    </div>
   </div>
-  <div class="suggestion-metrics js-opinions">Selecione um trecho para ver as opiniões</div>
+  <div class="suggestion-metrics js-opinions">
+    <div class="empty">
+      Selecione um trecho ao lado para ver as opiniões.
+    </div>
+  </div>
   <div class="toggle js-toggleButton"></div>
 </aside>
