--- a/src/templates/components/timeline-sidebar.html
+++ b/src/templates/components/timeline-sidebar.html
@@ -1,7 +1,9 @@
 <aside class="side-bar">
   <div class="header">
     <h3>Minhas Versões</h3>
-    <div class="compare">Comparar</div>
+    <div class="action">
+      <span class="item">comparar</span>
+    </div>
   </div>
   <ol class="version-timeline js-timelineSidebar">
     {% include "components/versions-list.html" %}
