--- a/src/templates/components/opinions-sidebar.html
+++ b/src/templates/components/opinions-sidebar.html
@@ -2,11 +2,7 @@
 
 <aside class="side-bar">
   <div class="header">
-    <h3>Opiniões</h3>
-    <div class="action">
-      <span class="item">Consenso</span>
-      <span class="item -disable">Dissenso</span>
-    </div>
+    <h3>Opiniões mais votadas</h3>
   </div>
   <div class="suggestion-metrics js-opinions">
     <div class="empty">
