--- a/src/static/scss/components/_app-tag.scss
+++ b/src/static/scss/components/_app-tag.scss
@@ -7,6 +7,10 @@
     color: $color-brand;
   }
 
+  &.-private > span {
+    color: $color-deep-gray;
+  }
+
   &.-theme {
     align-items: center;
   }
