Refactor suggestion input

--- a/src/static/scss/components/_suggestion-input.scss
+++ b/src/static/scss/components/_suggestion-input.scss
@@ -1,27 +1,32 @@
 .suggestion-input {
   position: fixed;
   z-index: 2;
-  top: 0;
+  bottom: 4.75rem;
+  left: 1rem;
 
   visibility: hidden;
 
   box-sizing: border-box;
-  width: 100%;
-  padding: 1rem;
-  padding-right: 1.6rem;
-  padding-left: 1.6rem;
+  width: calc(100% - 2rem);
+  padding: 1rem 1.5rem;
 
   transition: transform .3s 0s ease, visibility 0s .3s;
-  transform: translateY(-100%);
+  transform: translateY(calc(100% + 4.75rem));
 
+  border-top: $color-brand 3px solid;
   background-color: #FFF;
+  box-shadow: 0 4px 6px 4px rgba(0, 0, 0, .1);
 
-  @include footer-shadow;
   @include bp-mediumup {
-    top: unset;
     bottom: 0;
+    left: 0;
+
+    width: 100%;
+    padding: 1.75rem 2rem;
 
     transform: translateY(100%);
+
+    box-shadow: 0 0 6px 4px rgba(0, 0, 0, .1);
   }
 
   &.-show {
@@ -40,27 +45,53 @@
     }
   }
 
-  & > .content > .close {
-    position: absolute;
-    top: 0;
-    right: 0;
+  & > .content > .close-icon {
+    top: -.5rem;
+    right: -.5rem;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include bp-mediumup {
+      top: -.5rem;
+      right: -.25rem;
+    }
+  }
 
-    width: 2.75rem;
-    height: 2.75rem;
+  & > .content > .close-icon > img {
+    height: 1.5rem;
 
-    cursor: pointer;
+    @include bp-mediumup {
+      height: 2rem;
+    }
   }
 
   & > .content > .text {
     margin: 1rem 0;
   }
 
-  & > .content > .close > img {
-    width: 1.5rem;
+  & > .content > .text > p {
+    font-size: .875rem;
+    line-height: 1.5;
+
+    @include bp-mediumup {
+      font-size: 1rem;
+    }
+  }
+
+  & > .content > h3 {
+    font-size: .875rem;
+
+    margin: 0;
+
+    @include bp-mediumup {
+      font-size: 1rem;
+    }
+  }
+
+  & > .content > .info-text > h3 {
+    font-size: .875rem;
+
+    @include bp-mediumup {
+      font-size: 1rem;
+    }
   }
 
   & > .content > .input {
@@ -69,14 +100,15 @@
     display: flex;
     align-items: center;
 
-    min-height: 3rem;
+    height: 2.5rem;
     margin-top: .5rem;
 
     border: 1px solid $color-grayish;
   }
 
   & > .content > .input > input {
-    padding: 1rem;
+    height: 100%;
+    padding: .5rem;
 
     box-shadow: none;
   }
@@ -86,7 +118,7 @@
     align-items: center;
 
     height: 100%;
-    padding: 1rem;
+    padding: 0 1rem;
 
     cursor: pointer;
   }
