Show two texts side by side
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -69,6 +69,7 @@
 @import 'components/breadcrumb-menu';
 @import 'components/compare-checkbox';
 @import 'components/page-minimap';
+@import 'components/close-diff';
 
 // Vendor
 @import 'vendor/tooltip';
