--- a/src/templates/components/timeline-sidebar.html
+++ b/src/templates/components/timeline-sidebar.html
@@ -1,8 +1,10 @@
 <aside class="side-bar">
   <div class="header">
     <h3>Minhas Versões</h3>
-    <div class="action js-compareVersionAction js-compare">Comparar</div>
-    <button class="app-button -red _hidden js-showDiff">Vai</button>
+    <div class="actions">
+      <button class="app-button -gray js-showDiff">Comparar</button>
+      <div class="action js-compareVersionAction js-compare">Comparar</div>
+    </div>
   </div>
   <ol class="version-timeline js-timelineSidebar">
     {% include "components/versions-list.html" %}
