--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -51,8 +51,12 @@
           {% if invite.group.closing_date|is_open %}
             {% if invite.group.openning_date %}
             <div class="document-progress">
-              <span class="begin">Aberto há <span>{{ invite.group.openning_date|absolute_days_since }} dias</span></span>
-              <span class="end">Encerra em <span>{{ invite.group.closing_date|absolute_days_since }} dias</span></span>
+
+              <span class="begin">Aberto{% if invite.group.openning_date|absolute_days_since == "0" %} hoje{% elif group.openning_date|absolute_days_since == "1" %} ontem{% else %} há <span>{{ invite.group.openning_date|absolute_days_since }} dias{% endif %}</span>
+              </span>
+              
+              <span class="end">Encerra{% if invite.group.closing_date|absolute_days_since == "0" %} hoje{% elif invite.group.closing_date|absolute_days_since == "1" %} amanhã{% else %}em <span>{{ invite.group.closing_date|absolute_days_since }} dias{% endif %}</span>
+              </span>
 
               <div class="progress-bar">
                 <span class="value" style="transform: scaleX({% progress_time_normalized invite.group.openning_date invite.group.closing_date %})"></span>
@@ -114,8 +118,12 @@
         {% if private_group.closing_date|is_open %}
           {% if private_group.openning_date %}
           <div class="document-progress">
-            <span class="begin">Aberto há <span>{{ private_group.openning_date|absolute_days_since }} dias</span></span>
-            <span class="end">Encerra em <span>{{ private_group.closing_date|absolute_days_since }} dias</span></span>
+
+            <span class="begin">Aberto{% if private_group.openning_date|absolute_days_since == "0" %} hoje{% elif private_group.openning_date|absolute_days_since == "1" %} ontem{% else %} há <span>{{ private_group.openning_date|absolute_days_since }} dias{% endif %}</span>
+            </span>
+
+            <span class="end">Encerra{% if private_group.closing|absolute_days_since == "0" %} hoje{% elif private_group.closing|absolute_days_since == "1" %} amanhã{% else %}em <span>{{ private_group.closing_date|absolute_days_since }} dias{% endif %}</span>
+            </span>
 
             <div class="progress-bar">
               <span class="value" style="transform: scaleX({% progress_time_normalized private_group.openning_date private_group.closing_date %})"></span>
@@ -164,8 +172,12 @@
           {% if public_group.closing_date|is_open %}
             {% if public_group.openning_date %}
             <div class="document-progress">
-              <span class="begin">Aberto há <span>{{ public_group.openning_date|absolute_days_since }} dias</span></span>
-              <span class="end">Encerra em <span>{{ public_group.closing_date|absolute_days_since }} dias</span></span>
+
+              <span class="begin">Aberto{% if public_group.openning_date|absolute_days_since == "0" %} hoje {% elif public_group.openning_date|absolute_days_since == "1" %} ontem{% else %} há <span>{{ public_group.openning_date|absolute_days_since }} dias {% endif %}</span>
+              </span>
+
+              <span class="end">Encerra{% if public_group.closing|absolute_days_since == "0" %} hoje{% elif public_group.closing|absolute_days_since == "1" %} amanhã{% else %}em <span>{{ public_group.closing_date|absolute_days_since }} dias{% endif %}</span>
+              </span>
 
               <div class="progress-bar">
                 <span class="value" style="transform: scaleX({% progress_time_normalized public_group.openning_date public_group.closing_date %})"></span>
