--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -47,11 +47,11 @@
 
       {% if request.user.profile.profile_type == 'owner' %}
       <div class="tools">
-        <a href="{% url 'owner_documents' %}" class="icon {% if current_path|endswith:'/dashboard/' %}-active{% endif %}">
+        <a href="{% url 'owner_documents' %}" class="icon {% if current_path|endswith:'/dashboard/' %}-active{% endif %}" aria-label="Meus documentos">
           {% include "svgs/dashboard-icon.html" %}
         </a>
         <div class="dropdown-menu -notifications {% if request.user.notifications.all|has_new %}-notified{% endif %} js-notificationDropdown">
-          <button class="icon js-notificationButton" aria-label="Configurar">
+          <button class="icon js-notificationButton" aria-label="Notificações">
             {% include "svgs/notifications-icon.html" %}
           </button>
 
