--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -118,4 +118,21 @@
 
     margin-top: 1rem;
   }
+
+  & > article > p {
+    cursor: pointer;
+  }
+
+  & > article > p:hover > *,
+  & > article > p.-enabled > *,
+  & > article > p.-enabled > .document-excerpt > .text-highlight,
+  & > article > p:hover > .document-excerpt > .text-highlight {
+    color: $color-deep-gray !important;
+  }
+
+  &.-supressed {
+    & > article * {
+      color: #CCC;
+    }
+  }
 }
