Feature/sugestion metrics (#146)
* Create suggestion metrics

* Create suggestion metrics

* Create document excerpt votes

* create and apply template tags

* change clusters to opinion metrics

* fix votes by group

* craete template tag to return votes percent by type

* Improve suggestion metrics

* Create value bar

* Add card hover

* Remove filters

* add template tags to show majority votes

* add tag with participation count

* fix click in opinion to highlight document

* Fix suggestion metrics

* create events to enable and disable highlights in excerpt and opinions

* fix lint errors

--- a/src/static/scss/components/_excerpt-wrapper.scss
+++ b/src/static/scss/components/_excerpt-wrapper.scss
@@ -1,11 +1,15 @@
 .excerpt-wrapper {
+  position: relative;
+
   margin-top: 2rem;
 
   &.-center {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+
     text-transform: uppercase;
+
     h3 {
       margin: 0;
     }
@@ -13,5 +17,44 @@
 
   &.-quote {
     font-style: italic;
+  }
+
+  & > .votes {
+    position: absolute;
+    top: 50%;
+    left: -4.5rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 2.5rem;
+    height: 1.4rem;
+
+    transform: translateY(-50%);
+
+    border: 1px solid #B255C9;
+    background-color: rgba(#B255C9, .6);
+  }
+
+  & > .votes > .value {
+    font-size: $font-size-centi;
+    font-weight: bold;
+
+    position: absolute;
+    z-index: 1;
+
+    text-transform: uppercase;
+
+    color: #FFF;
+  }
+
+  & > .votes > .bar {
+    position: absolute;
+    left: 0;
+
+    height: 100%;
+
+    background-color: #B255C9;
   }
 }
