--- a/src/templates/components/document-opinions.html
+++ b/src/templates/components/document-opinions.html
@@ -1,6 +1,6 @@
-{% load staticfiles projects_tags participations_tags %}
+{% load staticfiles projects_tags participations_tags dashboard_tags %}
 
-<article id="article">
+<article id="article" class="js-articleDocument" data-group-id={{group.id}}>
   <header>
     {% now "Y-m-d" as todays_date %}
     {% if group.closing_date|date:"Y-m-d" > todays_date %}
@@ -26,11 +26,20 @@
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         <span class="js-defaultText">...</span>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
+        {% if excerpt|exerpt_votes:group > 0 %}
+        <span class="votes">
+          <span class="value">{{excerpt|exerpt_votes:group}}</span>
+        </span>
+        {% endif %}
       </p>
       {% else %}
       <p class="excerpt-wrapper {% excerpt_classes excerpt %} js-excerptWrapper">
         <b class="js-excerptNumbering">{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt %}
+        <span class="votes">
+          <span class="value">{{excerpt|excerpt_participants:group}}</span>
+          <span class="bar" style="width: {% get_percent excerpt|excerpt_participants:group participation_count %}%;"></span>
+        </span>
       </p>
       {% endif %}
     {% endif %}
